# hackathon-2024

./: README.md
Backend/: .gitignore  Dockerfile  ERD.py  Makefile  pyproject.toml  requirements.txt
Backend/app/: main.py
Backend/app/common/: config.py  enums.py  error.py
Backend/app/database/: crud.py  database.py  models.py  schemas.py
Backend/app/routers/: __init__.py
Backend/app/routers/v1/: file_router.py  fixed_schedule_router.py  professor_router.py  professor_schedule_router.py  schedule_router.py  student_router.py  v1_router.py
Backend/app/utils/: aws_ses.py  oauth2.py  professor_oauth2.py
Frontend/: .env
Frontend/src/api/: fixed_schedule.ts  index.ts  professor.ts  student.ts
Frontend/src/components/: AuthRoute.tsx
Frontend/src/components/CustomInput/: index.tsx
Frontend/src/components/RawTable/: index.tsx
Frontend/src/constants/: api.ts  form.ts
Frontend/src/lib/: Query.ts
Frontend/src/types/: fixed_time.ts  leature.ts  professor.ts  schedule.ts
ProfesserFrontend/: .env.development  package.json
ProfesserFrontend/src/: index.css
ProfesserFrontend/src/api/: index.ts  professor.ts  professor_schedule.ts  schedule.ts
ProfesserFrontend/src/components/: AuthRoute.tsx  Avatar.tsx  Calendar.tsx  MainCard.tsx
ProfesserFrontend/src/constants/: api.ts  cookie.ts  form.ts  index.ts  query.ts  route.ts  routes.ts
ProfesserFrontend/src/lib/: Axios.ts  Query.ts
ProfesserFrontend/src/shared/: Providers.tsx
ProfesserFrontend/src/theme/: index.tsx  palette.ts
ProfesserFrontend/src/types/: axios.ts  index.ts  student.ts
(+42 files in other folders)
