[tool.poetry]
name = "Decompiler hackathon 2024"
version = "0.0.1"
description = "디컴파일러 해커톤 2024"
authors = ["Juanh201 <junah.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
prod = "uvicorn app.main:app --host=0.0.0.0 --port=8000"
dev = "uvicorn --reload app.main:app"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
pymysql = "1.0.2"
fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.5.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "1.4.45"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
boto3 = "^1.28.52"
werkzeug = "^2.3.7"
python-multipart = "^0.0.6"
pillow = "^10.0.1"
pydantic = {version = "1.9.1", extras = ["email"]}
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
